# blang

./: README.md  pyproject.toml  second.bl
.github/workflows/: build-and-test.yml  ci.yml  release.yml
emacs/: blang-mode.el
src/blang/: __main__.py  cli.py  compiler.py  matcher.py  parser.py  tokeniser.py
src/blang/compiler/: assignment.py  compiler.py  precompiler.py  types.py
src/blang/parser/: parser.py  tokeniser.py
src/blang/tokeniser/: __init__.py  matcher.py  tokeniser.py
test/: test_array_index.bl  test_bool.bl  test_compiler.py  test_divide.bl  test_float.bl  test_for.bl  test_for_range.bl  test_neg_relationals.bl  test_parser.py  test_printf.bl  test_regfillup.bl  test_relationals.bl  test_squelch_up.bl  test_string.bl  test_tokeniser.py  test_var_eq_var.bl
